# apexis-core

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_sizing_simulation.py  residential_project.py
src/apexis/: __init__.py
src/apexis/core/: __master__.py
src/apexis/core/domain/: engine.py  entities.py
src/apexis/core/exporters/: markdown_exporter.py  pandoc_exporter.py
src/apexis/core/interfaces/: calculator.py  data_provider.py  exporter.py  repository.py
src/apexis/core/utils/: converters.py
src/apexis/standards/: factory.py
src/apexis/standards/aea90364/: adapter.py
src/apexis/standards/aea90364/data/: constants.json  factors.json  lookup.py  wires.json
src/apexis/standards/aea90364/formulas/: ampacity.py  derating.py  short_circuit.py  thermal_stress.py  voltage_drop.py
src/apexis/standards/aea90364/templates/: detailed_report.md
src/apexis/standards/aea90364/validators/: circuit_validator.py
templates/: plantilla.docx
tests/: test_src_apexis_all_in_one_v1.py  test_src_apexis_core_domain_engine.py  test_src_apexis_core_domain_entities.py  test_src_apexis_core_exporters_markdown_exporter.py  test_src_apexis_core_exporters_pandoc_exporter.py  test_src_apexis_core_interfaces.py  test_src_apexis_core_master.py  test_src_apexis_core_utils_converters.py  test_src_apexis_init.py  test_src_apexis_standards_aea90364_adapter.py  test_src_apexis_standards_aea90364_data_lookup.py  test_src_apexis_standards_aea90364_formulas_ampacity.py  test_src_apexis_standards_aea90364_formulas_derating.py  test_src_apexis_standards_aea90364_formulas_short_circuit.py  test_src_apexis_standards_aea90364_formulas_voltage_drop.py  test_src_apexis_standards_aea90364_validators_circuit_validator.py  test_src_apexis_standards_factory_aea90364.py
